# ethan_ws

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  cool_deploy.sh  deploy.sh  deploy2.sh  resources_deploy.sh  server_deploy.sh
cool_binary/: cool.txt  (+2 more)
pusoy/: Cargo.toml
pusoy/src/: bot.rs  cards.rs  lib.rs  players.rs  state.rs
pusoy/src/play/: finder.rs  mod.rs
server/: Cargo.toml  resources_deploy.sh
server/resources/: index.html
server/resources/apush/: godset.txt  index.css
server/resources/arena/: index.css  index.js
server/resources/filler/: index.css  index.js
server/resources/history/: index.html
server/resources/history/create/: index.css  index.html  index.js
server/resources/history/join/: index.html  index.js
server/resources/history/play/: index.css
server/resources/pusoy/: index.js
server/resources/secret/extrasecret/: index.html
server/resources/secure/: index.html  index.js
server/resources/tanks/: index.css  index.js
server/src/: base64.rs  filler.rs  frame.rs  god_set.rs  http_handler.rs  lib.rs  log.rs  main.rs  server.rs  server_state.rs  util.rs
server/src/apps/: arena.rs  filler.rs  god_set.rs  history.rs  mod.rs  secure.rs  tanks.rs
server/src/apps/history/: mod.rs  quiz_game.rs  vocabulary_model.rs
server/src/apps/pusoy/: mod.rs
server/src/state/: mod.rs
server/src/websocket_apps/: dummy.rs  filler.rs  god_set.rs  mod.rs  tanks.rs
website/: Cargo.toml
website/src/: main.rs
website/src/apps/: arena.rs  filler.rs  god_set.rs  mod.rs  secure.rs  tanks.rs
website/src/apps/history/: mod.rs  quiz_game.rs  vocabulary_model.rs
website/src/apps/pusoy/: bot.rs  card.rs  cards.rs  mod.rs  pusoy.rs  pusoy_game.rs  state.rs  util.rs
website/src/apps/pusoy/play/: finder.rs  mod.rs
(+80 files in other folders)
