[package]
name = "pusoy"
version = "0.1.0"
authors = ["EtomicBomb <ethan@ethan.ws>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.7.3"
vec_map = "0.8.2"
serde = { version = "1.0.114", features = ["derive"] }
serde_derive = "1.0.114"
bincode = "1.3.1"