[package]
name = "server"
version = "0.1.0"
authors = ["EtomicBomb <ethan@ethan.ws>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
sha1 = "0.6.0"
lazy_static = "1.4.0"
chrono = "0.4.11"
rand = "0.7.3"
json = { path = "../json" }
lisp = { path = "/home/etomicbomb/RustProjects/ethan_ws/lisp" }