[package]
name = "server"
version = "0.1.0"
authors = ["EtomicBomb"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.6.0"
lazy_static = "1.4.0"
chrono = "0.4.11"
rand = "0.7.3"

json = { path = "../json" }
lisp = { path = "../lisp" }
web_socket = { path = "../web_socket" }
http = { path = "../http" }