[package]
name = "website"
version = "0.1.0"
authors = ["EtomicBomb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "../server" }
json = { path = "../json" }
web_socket = { path = "../web_socket" }
rand = "0.7.3"
lazy_static = "1.4.0"
pusoy = { path = "../pusoy" }